@@ -1,5 +1,6 @@
 package gui;
 
+import gui.controllers.AudioPlayer;
 import gui.controllers.View;
 import gui.controllers.ViewSwitcher;
 import javafx.application.Application;
@@ -16,6 +17,9 @@ import java.io.IOException;
 /**
  * main gui entry point
  * also creates the logic/player instances
+ * <p>
+ * to use javafx, add jvm args
+ * --module-path lib/lib --add-modules javafx.controls,javafx.fxml,javafx.media
  */
 public class GUIMain extends Application  {
     public static void main(String[] args) {
@@ -27,6 +31,7 @@ public class GUIMain extends Application  {
 
     @Override
     public void start(Stage stage) throws IOException {
+        ViewSwitcher.setStage(stage);
         scene = new Scene(new Pane());
         //Load Scene
         ViewSwitcher.setScene(scene);
@@ -40,7 +45,17 @@ public class GUIMain extends Application  {
         stage.getIcons().add(icon);
         stage.setTitle("Battleship");
 
-        stage.setFullScreen(true);
+        //stage Property's
+
+        stage.setMinWidth(1280);
+        stage.setMinHeight(760);
+
+        stage.setMaxWidth(1920);
+        stage.setMaxHeight(1080);
+
+        //AudioPlayer.playIntro();
+        //stage.setResizable(false);
+        //stage.setFullScreen(true);
 
         //Start application
         stage.show();
